1.0b8
-----
* Better support for singleton (non-album) tracks. The "singleton" path
  format can be used to customize where these tracks are stored. While
  importing, you can choose the "as Tracks" (T) option to add
  singletons to your library.
* The "distance" number, which quantifies how different an album's
  current and proposed metadata are, is now displayed as "similarity"
  instead. This should be less noisy and confusing; you'll now see
  99.5% instead of 0.00489323.
* Added a new plugin event, "album_imported", which is called every
  time an album is added to the library. (Thanks, Lugoues!)
* A new plugin method, register_listener, is an imperative alternative
  to the @listen decorator (Thanks again, Lugoues!)
* In path formats, $albumartist now falls back to $artist (as well as
  the other way around).
* Fix adding individual tracks in BPD.

1.0b7
-----
* "Various artists" releases are handled much more gracefully. The
  autotagger now sets the "comp" flag on albums whenever the album is
  identified as a "various artists" release by MusicBrainz. Also,
  there is now a distinction between the "album artist" and the "track
  artist", the latter of which is never "Various Artists" or other such
  bogus stand-in. (Thanks to Jonathan Buchanan for the bulk of the
  implementation!)
* The directory hierarchy can now be customized based on release type.
  In particular, the "path_format" setting in .beetsconfig has been
  replaced with a new [paths] section, which allows you to specify
  different path formats for normal releases, "compilation" releases,
  and every release type (see below). The default path formats have
  been changed to use $albumartist instead of $artist. More information
  about this change is available on the wiki.
* A new "albumtype" field reflects the release type as specified by
  MusicBrainz: http://wiki.musicbrainz.org/ReleaseType
* When deleting files, beets now appropriately "prunes" the directory