@@ -3,7 +3,8 @@
 * Better support for singleton (non-album) tracks. The "singleton" path
   format can be used to customize where these tracks are stored. While
   importing, you can choose the "as Tracks" (T) option to add
-  singletons to your library.
+  singletons to your library. The query "singleton:true" matches only
+  singleton tracks; "singleton:false" matches only album tracks.
 * The "distance" number, which quantifies how different an album's
   current and proposed metadata are, is now displayed as "similarity"
   instead. This should be less noisy and confusing; you'll now see
